[gd_scene load_steps=6 format=3 uid="uid://d1d75b6p7brti"]

[ext_resource type="Script" uid="uid://bd3cqqmq1wa1d" path="res://Player/Attack/amp_wave.gd" id="1_amp_wave"]
[ext_resource type="Texture2D" uid="uid://cbey8q25dkf4n" path="res://Textures/Items/Weapons/amp.png" id="2_amp"]
[ext_resource type="Texture2D" uid="uid://ui8svr8rc7nl" path="res://Textures/Items/Weapons/amp_wave.png" id="3_amp_wave"]
[ext_resource type="AudioStream" uid="uid://dh2rmmqed1e3p" path="res://Audio/SoundEffect/phaser-feedback-1-29402 (1).mp3" id="4_645cb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cww50"]
radius = 114.039

[node name="AmpWave" type="Node2D" groups=["attack"]]
script = ExtResource("1_amp_wave")

[node name="AmpSprite" type="Sprite2D" parent="."]
position = Vector2(40, 0)
scale = Vector2(0.043, 0.04)
texture = ExtResource("2_amp")

[node name="AmpWaveSprite" type="Sprite2D" parent="."]
position = Vector2(40, 0)
texture = ExtResource("3_amp_wave")
hframes = 42
frame = 35

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DamageTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(40, 1)
shape = SubResource("CircleShape2D_cww50")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_645cb")
volume_db = -6.19
autoplay = true

[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
